# timmy-kb-acme

./: .coverage  .env  .env.example  .flake8  .gitattributes  .gitignore  .gitignore`  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .txt) `  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.md  NAME_LOGGING_RULE.md  PR_BODY.txt  README.md  SECURITY.md  SEPARATION_ACK.md  SUMMARY.md  __orig_manage.py  _head.txt  _old_tools_check.py  _old_tools_check_ascii.py  _test_chat.py  app_numbered.txt  apply_changes.py  audit_logging.py  audit_repo.py  bench.json  build_log.txt  coding_rule.md  constraints.txt  cspell.json  diff.txt  e2e.json  (+48 more)
.codex/: AGENTS.md  CHECKLISTS.md  CLOSURE_AND_SKEPTIC.md  CODING_STANDARDS.md  CONSTITUTION.md  OWNERSHIP_SCHEMA.md  PROMPTS.md  USER_DEV_SEPARATION.md  WORKFLOWS.md
.github/: CODEOWNERS  ci-pr-trigger.txt  codex-instructions.md  dependabot.yml  e2e-smoke-kick.txt  pull_request_template.md
.pytest_clients_db/: clients.yaml
.streamlit/: config.toml
book/: README.md  SUMMARY.md
cli/: tag_review_cli.py
clients_db/: clients.yaml
config/: .env.example  assistant_vision_system_prompt.txt  cartelle_raw.yaml  config  config.example.yaml  config.yaml  config.yaml.example  default_semantic_mapping.yaml  entities.yaml  pdf_dummy.yaml  raw_structure.yaml  semantic_mapping.yaml  tags_template.yaml  timmy_tags.yaml  vision_statement.yaml  vision_template.yaml  visionstatement.yaml
data/: kb.sqlite
docs/: AGENTS.md  AGENTS_INDEX.md  CHANGELOG.md  OCP_WORKFLOW.md  PromptChain_spec.md  README.md  SECURITY.md  architecture.md  arricchimento.md  codex_integrazione.md  coding_rule.md  configuration.md  configurazione.md  contract_alignment.md  data_transformation_review.md  developer_guide.md  developer_guide_tools_timmy_kb.md  developer_quickstart.md  explainability_overview.md  guida_codex.md  guida_ui.md  import_contract.md  index.md  logging_events.md  next_alignment.md  next_boundary.md  next_core_for_assistants.md  observability.md  policy_push.md  release_notes_2_0_0.md  retriever_refactor_map.md  runbook_codex.md  security.md  streamlit_ui.md  strict_vs_dummy_beta.md  test_suite.md  user_guide.md  versioning_policy.md
instructions/: 00_ssot_agency.md  01_intents_and_actions.md  02_prompt_chain_lifecycle.md  03_gatekeepers_contracts.md  04_microagents_work_orders.md  05_pipeline_state_machine.md  05_pipeline_workspace_state_machine.md  06_promptchain_workspace_mapping.md  06_ui_contract.md  07_gate_checklists.md  08_gate_evidence_and_retry_contract.md  09_context_layout_contract_beta.md  10_runtime_strict_contract_beta.md  11_ui_contract.md  12_env_override_capabilities.md  13_artifacts_policy.md  14_agent_package_contract.md  14_beta_contract_checklist.md  AGENTS.md  README.md
observability/: docker-compose.yaml  otel-collector-config.yaml  promtail-config.yaml  tempo-config.yaml
playwright-report/: buttons_manage.txt  counts_manage.txt  manage.html  manage_modal.html
reports/: fallback_catalog_2026-02-14.md  fallback_scan_2026-02-14.txt
schemas/: VisionOutput.schema.json
scripts/: apply_branch_protection.sh  assistants_smoke.py  auto_wrap_e501.py  bench_embeddings_normalization.py  check_no_direct_reads.py  check_structure.py  e2e_smoke_test.py  fix_mojibake.py  forbid_control_chars.py  gen_agents_matrix.py  gitbook_publish_smoke.py  ingest_demo.py  kb_healthcheck.py  kb_healthcheck_responses.py  migrate_yaml_to_db.py  observability_stack.py  peek_folder_terms.py  quick_openai_diag.py  quick_vs_probe.py  refactor_logging_ui.py  retriever_benchmark.py  setup_repo_env.ps1  smoke_e2e.py  smoke_streamlit_finance.py  verify_vision_schema.py  vision_alignment_check.py
semantic/: .vision_hash  finance.db  semantic_mapping.yaml  tags.db
src/: errors.py  ingest.py  kb_db.py  kg_build.py  kg_builder.py  kg_models.py  onboarding.py  onboarding_full.py  pre_onboarding.py  prompt_builder.py  retriever.py  semantic_headless.py  semantic_onboarding.py  tag_onboarding.py  tag_onboarding_context.py  tag_onboarding_raw.py  tag_onboarding_semantic.py  vscode_bridge.py
system/: AGENTS.md  README.md  architecture.md  dummy_entropy_audit.md
tests/: AGENTS.md  conftest.py  end2end.py  end2end_dummy.py  est_retriever_calibrate_io.py  pdf2md_preview.py  preview_gitbook_dummy.py  test_agent_smoke.py  test_ai_config_prototimmy.py  test_ai_vision_dummy_check.py  test_architecture_paths.py  test_auto_tagger_writer.py  test_book_purity_adapter.py  test_capabilities_dummy_kb.py  test_capabilities_openai.py  test_capabilities_otel.py  test_capabilities_vision.py  test_chunk_record_builder.py  test_chunk_record_contract.py  test_cli_env_missing.py  test_cli_gen_vision_yaml.py  test_cli_runner.py  test_client_context_bootstrap_mode.py  test_client_context_settings.py  test_client_factory.py  test_clients_store.py  test_coder_embeddings_env.py  test_coder_rag_message.py  test_config_defaults.py  test_config_ui_utils_wrapper.py  test_config_utils.py  test_content_utils.py  test_content_utils_frontmatter.py  test_content_utils_logging.py  test_content_utils_no_traversal_when_safe_pdfs.py  test_content_utils_plan_validate.py  test_content_utils_readme_summary.py  test_content_utils_safe_pdfs.py  test_content_utils_slug_traversal_error.py  test_content_utils_symlink_category.py  (+191 more)
tools/: __init__.py  _bootstrap.py  apply_branch_protection.sh  auto_wrap_e501.py  bench_baseline.json  bench_embeddings_normalization.py  check_path.ps1  ci_dump_nav.py  clean_client_workspace.py  control_plane_env.py  e2e_smoke_test.py  fix_mojibake.py  forbid_control_chars.py  gen_agents_matrix.py  gen_dummy_kb.py  gen_vision_yaml.py  ingest_demo.py  kg_debug_dummy.py  migrate_yaml_to_db.py  non_strict_step.py  observability_stack.py  peek_folder_terms.py  quick_vs_probe.py  replace_quotes.py  retriever_benchmark.py  retriever_calibrate.py  sanitize_user_path.ps1  sbom.sh  setup_repo_env.ps1  smoke_semantic_from_drive.py  smoke_semantics_gating.py  system_preonboarding_check.py  test_prototimmy.py  test_runner.py  (+5 more)
(+954 files in other folders)
