[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timmy-kb"
version = "1.9.5"
requires-python = ">=3.11"

# Dipendenze runtime minime per installare il pacchetto via pip install .
# Nota: i pin completi restano in requirements.txt (SSoT). Qui manteniamo
# solo il set necessario all'esecuzione CLI/base senza UI/Drive.
dependencies = [
    "PyMuPDF==1.24.14",
    "PyPDF2==3.0.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.0.0",
    "python-dotenv==1.0.1",
    "python-slugify==8.0.4",
    "PyYAML==6.0.1",
    "requests==2.32.2",
    "numpy==1.26.4",
    # Compat pydantic/types
    "typing-extensions==4.12.2",
    "annotated-types==0.7.0",
    "typing-inspection==0.4.0",
]

[project.optional-dependencies]
# Extra opzionale per le funzionalità Google Drive (usato da: pip install .[drive])
drive = [
    "google-api-python-client==2.127.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.0",
    "google-auth==2.34.0",
    "httplib2==0.22.0",
    "requests-oauthlib==2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---------- Formatter / Lint allineati (isort→black→ruff) ----------

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["timmy_kb", "pipeline", "semantic", "storage", "ui"]

[tool.ruff]
line-length = 120
target-version = "py311"
# Allinea gli exclude a pre-commit; comunque i hook limitano a src/ e tests/
exclude = [
    "venv", ".venv", "node_modules", "output", "dist", "build", ".gitbook", "docs/_build"
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "S"]
ignore = ["E203", "ANN201", "ANN202", "ANN204", "T201", "B009", "B010", "B023", "B033", "B904", "E402", "S110", "S112", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S603", "S404", "T201", "B017", "S101", "ANN001", "ANN002", "ANN003", "B008"]
"src/tools/*" = ["T201", "S110"]
"src/tag_onboarding.py" = ["E501", "T201", "S608"]
"src/pipeline/drive/upload.py" = ["S110"]
"src/pipeline/file_utils.py" = ["S110"]
"src/pipeline/path_utils.py" = ["S110"]
"src/pipeline/yaml_utils.py" = ["S110"]
"src/pipeline/proc_utils.py" = ["S404", "S603"]
"src/ui/app.py" = ["S404", "S603"]
"src/storage/tags_store.py" = ["S608"]
"scripts/*" = ["S603", "S607", "S106"]

# --------------------------- Mypy ---------------------------

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
ignore_missing_imports = false
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "pipeline.config_utils"
disable_error_code = ["call-overload","no-any-return","arg-type"]

[[tool.mypy.overrides]]
module = "dotenv.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "github.*"
ignore_missing_imports = true
