[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timmy-kb"
version = "1.9.5"
requires-python = ">=3.11"

# Dipendenze runtime minime per installare il pacchetto via `pip install .`.
# I pin completi per gli ambienti sono gestiti con pip-tools (requirements*.txt).
dependencies = [
    "PyMuPDF~=1.26.5",
    "pypdf~=6.4.0",
    "pydantic~=2.7",
    "pydantic-settings~=2.0",
    "python-dotenv~=1.0",
    "python-slugify~=8.0",
    "PyYAML~=6.0",
    "requests~=2.32",
    "numpy~=2.3",
    # Compat pydantic/types
    "typing-extensions>=4.12,<5",
    "annotated-types~=0.7",
    "typing-inspection~=0.4",
]

[project.optional-dependencies]
# Extra opzionale per le funzionalità Google Drive (usato da: pip install .[drive])
drive = [
    "google-api-python-client~=2.171.0",
    "google-auth-httplib2~=0.2.0",
    "google-auth-oauthlib~=1.2.0",
    "google-auth~=2.34",
    "httplib2~=0.22.0",
    "requests-oauthlib~=2.0.0",
]

tests = [
    "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---------- Formatter / Lint allineati (isort→black→ruff) ----------

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["timmy_kb", "pipeline", "semantic", "storage", "ui"]

[tool.ruff]
line-length = 120
target-version = "py311"
# Allinea gli exclude a pre-commit; comunque i hook limitano a src/ e tests/
exclude = [
    "venv", ".venv", "node_modules", "output", "dist", "build", ".gitbook", "docs/_build"
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "S", "G"]
ignore = ["E203", "ANN201", "ANN202", "ANN204", "B009", "B010", "B023", "B033", "B904", "E402", "S110", "S112", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S603", "S404", "B017", "S101", "ANN001", "ANN002", "ANN003", "B008"]
"src/tools/*" = ["S110"]
"src/tag_onboarding.py" = ["E501", "S608"]
"src/pipeline/drive/upload.py" = ["S110"]
"src/pipeline/file_utils.py" = ["S110"]
"src/pipeline/path_utils.py" = ["S110"]
"src/pipeline/yaml_utils.py" = ["S110"]
"src/pipeline/proc_utils.py" = ["S404", "S603"]
"src/ui/app.py" = ["S404", "S603"]
"src/storage/tags_store.py" = ["S608"]
"scripts/*" = ["S603", "S607", "S106", "T201"]
